--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     text-align:center;
+    background-color: rgb(255,0,0,0.1);
 }
 label{
     display:block;
@@ -14,4 +15,7 @@ label{
 }
 #outputbox{
     padding-top: 1rem;
+}
+#heading{
+    border-bottom:3px dotted black;
 }
